--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is just some coding bit-'n'-pieces that have been useful maybe useful but don't really belong to any project.
+This is just some coding bit-'n'-pieces that have been useful maybe useful but don't really belong to any project. Also some useful tools for admin etc.
